--- a/virtual-classroom/pom.xml
+++ b/virtual-classroom/pom.xml
@@ -27,6 +27,25 @@
 				 </exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+      
+         <dependency>
+ 			<groupId>cglib</groupId>
+ 			<artifactId>cglib</artifactId>
+ 			<version>3.0</version>
+ 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		
+		</dependency>	
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
