--- a/virtual-classroom/pom.xml
+++ b/virtual-classroom/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.4.2</version>
         </dependency>
+        
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
       
          <dependency>
  			<groupId>cglib</groupId>
