--- a/virtual-classroom/pom.xml
+++ b/virtual-classroom/pom.xml
@@ -46,7 +46,12 @@
  			<version>3.0</version>
  		</dependency>
 		
-			
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		
+		</dependency>	
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
